Setup Room Database for User and Balance with implementation of hilt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Currency Exchanger</string>
-    <string name="amount">Amount</string>
-    <string name="my_balances">My Balances</string>
+    <string name="my_balances">My Balances :</string>
     <string name="submit">Submit</string>
     <string name="currency_exchange">Currency Exchange</string>
+    <string name="user_name">User Name :</string>
 </resources>
